Update rss20 test cases.

--- a/t/static_basic/config/blosxom.conf
+++ b/t/static_basic/config/blosxom.conf
@@ -1,4 +1,6 @@
 $datadir = "$ENV{BLOSXOM_CONFIG_DIR}/../data";
+$plugin_list = "$ENV{BLOSXOM_CONFIG_DIR}/plugins.conf";
+$plugin_path = "$ENV{BLOSXOM_CONFIG_DIR}/../../../general:$ENV{BLOSXOM_CONFIG_DIR}/../../../gavinc";
 $static_dir = "$ENV{BLOSXOM_CONFIG_DIR}/../static";
 $static_password = 'static';
 @static_flavours = qw/html rss/;
