Test suite updates.

--- a/t/templates/spec.yaml
+++ b/t/templates/spec.yaml
@@ -1,13 +1,4 @@
 tests:
   - 
     - ""
-    - "expected/index.html"
-  - 
-    - "path=/index.rss"
-    - "expected/index.rss"
-  - 
-    - "path=/web/index.html"
-    - "expected/web/index.html"
-  - 
-    - "path=/web/index.rss"
-    - "expected/web/index.rss"
+    - expected.html
