Update blosxom.conf with additional configuration variables

--- a/debian/blosxom.conf
+++ b/debian/blosxom.conf
@@ -14,9 +14,10 @@
 # Copyright 2003  Dirk Eddelbuettel <edd@debian.org> and GPL'ed
 
 # Blosxom
-# Author: Rael Dornfest <rael@oreilly.com>
-# Version: 2.0
-# Home/Docs/Licensing: http://www.raelity.org/apps/blosxom/
+# Author: Rael Dornfest (2003), The Blosxom Development Team (2005-2008)
+# Version: 2.1.0
+# Home/Docs/Licensing: http://blosxom.sourceforge.net/
+# Development/Downloads: http://sourceforge.net/projects/blosxom
 
 # --- Configurable variables -----
 
@@ -28,6 +29,9 @@
 
 # What's this blog's primary language (for outgoing RSS feed)?
 # $blog_language = "en";
+
+# What's this blog's text encoding ?
+# $blog_encoding = "UTF-8";
 
 # Where are this blog's entries kept?
 # $datadir = "/Library/WebServer/Documents/blosxom";
@@ -50,14 +54,24 @@ $datadir = "/var/lib/blosxom/data";
 # What is the default flavour?
 # $default_flavour = "html";
 
+# Should I show entries from the future (i.e. dated after now)?
+# $show_future_entries = 0;
+
 # --- Plugins (Optional) -----
+
+# File listing plugins blosxom should load
+# (if empty blosxom will load all plugins in $plugin_dir and $plugin_path directories)
+# $plugin_list = "";
 
 # Where are my plugins kept?
 $plugin_dir = "/etc/blosxom/plugins";
 
-# Where should my modules keep their state information?
+# Where should my plugins keep their state information?
 $plugin_state_dir = "/var/lib/blosxom/state";
 
+# Additional plugins location
+# List of directories, separated by ';' on windows, ':' everywhere else
+# $plugin_path = "";
 
 # --- Static Rendering -----
 
