Add the moved $encode_xml_entities config option to blosxom.conf, too.

--- a/debian/blosxom.conf
+++ b/debian/blosxom.conf
@@ -89,6 +89,9 @@ $static_dir = "/var/lib/blosxom/static";
 # 0 = no, 1 = yes
 # $static_entries = 0;
 
+# Should I encode entities for xml content-types? (plugins can turn this off if they do it themselves)
+# $encode_xml_entities = 1;
+
 # ------------ leave this last line
 
 1;
