--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: blosxom
 Section: web
 Priority: optional
 Maintainer: Gerfried Fuchs <rhonda@debian.at>
-Uploaders: Axel Beckert <be@deuxchevaux.org>
+Uploaders: Axel Beckert <abe@deuxchevaux.org>
 Standards-Version: 3.8.0
 Homepage: http://blosxom.sourceforge.net/
 
