Corrected Vcs-Browser entry in debian/control.

--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Axel Beckert <abe@deuxchevaux.org>
 Standards-Version: 3.8.0
 Homepage: http://blosxom.sourceforge.net/
 Vcs-Git: git://repo.or.cz/blosxom.git
-Vcs-Browser: http://repo.or.cz/r/blosxom.git
+Vcs-Browser: http://repo.or.cz/w/blosxom.git
 
 Package: blosxom
 Architecture: all
